@@ -1,3 +1,8 @@
+2006-10-23  Johan Bilien <johan.bilien@nokia.com>
+
+	* hildon-navigator/hn-app-menu-item.c: Make a copy of
+	  the pixbuf to avoid modifying the cached icon
+
 2006-12-23  Moises Martinez <moises.martinzes@nokia.com>
 
 	* hildon-navigator/hildon-navigator-window.c:
